--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -7,4 +7,4 @@ Proceed = Proceed to Log in
 Error =   Error
 Login =   Login Error
 Invalid = Invalid Credentials were entered at this time. Please try again.
-MM-dd-yyyy = MM-dd-yyyy
+MM/dd/yyyy =  MM/dd/yyyy 
