Appt & Customer submissions update with best practices

--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -57,3 +57,5 @@ OVERLAP = OVERLAP WARNING
 Current = Current selection either conflicts with established business hours or overlaps existing appointments. Please Try Again.
 Upcoming = Upcoming Appointment
 AppointmentNotification = Appointment Notification
+You = You have an upcoming appointment with the following criteria:
+There = There are no upcoming appointments at this time.
