refactoring for function name best practices and fixing appointmentOverlap

--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -15,6 +15,7 @@ User = User
 Appointments = Appointments
 APPOINTMENTS = APPOINTMENTS
 APPOINTMENT = APPOINTMENT
+Appointment = Appointment 
 Customers = Customers
 CUSTOMERS = CUSTOMERS
 Customer = Customer
@@ -59,3 +60,11 @@ Upcoming = Upcoming Appointment
 AppointmentNotification = Appointment Notification
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
+CurrentDay = Current Day
+Sunday = Sunday
+Monday = Monday
+Tuesday = Tuesday
+Wednesday = Wednesday
+Thursday = Thursday
+Friday = Friday
+Saturday = Saturday
