--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -16,12 +16,22 @@ Appointments = Appointments
 APPOINTMENTS = APPOINTMENTS
 APPOINTMENT = APPOINTMENT
 Appointment = Appointment 
+AppointmentID = Appointment ID
+ApptID = Appt.ID
+AppointmentType = Appointment Type
+APPOINTMENTID = APPOINTMENT ID# :
+APPOINTMENT_TITLE = APPOINTMENT TITLE:
+UserID = User ID
 Customers = Customers
 CUSTOMERS = CUSTOMERS
 Customer = Customer
+CustomerID = Customer ID
+CustomerName = Customer Name
 Reports = Reports
 Back  = Back
 BACK = BACK
+ApptModification = Modify Appointment
+Modify = Modify
 Appt = Appt
 Title = Title
 Description = Description
@@ -30,8 +40,14 @@ Type = Type
 Start = Start
 End = End
 ADD = ADD
+Add = Add
 UPDATE = UPDATE
 DELETE = DELETE
+
+addCust = ADD CUSTOMER
+modCust = UPDATE CUSTOMER
+addAppt = ADD APPOINTMENT
+modAppt = UPDATE APPOINTMENT
 All = All
 Month = Month
 Week = Week
@@ -39,13 +55,16 @@ Name = Name
 Address = Address
 Postal = Postal Code
 Phone = Phone
-Division = Division
+Division = Division 
+DivisionID = Division ID
 Countries = Countries
+Country = Country
+State = State/Province
 Total = Total
 Months = Month
 Totals = Totals
-Select = Select
-Full =  Full Contact Agenda
+contactSelect = Select
+Full =  Contact Schedule
 Remaining = Remaining
 for = for
 to = to
@@ -58,6 +77,12 @@ OVERLAP = OVERLAP WARNING
 Current = Current selection either conflicts with established business hours or overlaps existing appointments. Please Try Again.
 Upcoming = Upcoming Appointment
 AppointmentNotification = Appointment Notification
+DeleteApptQ = Are you sure you wish to delete this appointment?
+DelWarn = Delete Warning
+DelConfirm = Delete Confirmation
+DelAppt = Deleting Appointment
+ApptDel = Appointment Deleted
+ApptDelResults = THE FOLLOWING APPOINTMENT HAS BEEN DELETED!
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
 CurrentDay = Current Day
@@ -68,3 +93,21 @@ Wednesday = Wednesday
 Thursday = Thursday
 Friday = Friday
 Saturday = Saturday
+apptTotalTitle = Appt. Totals, Totaux des R.v.
+apptRemTitle = Remaining Appointments , Rendez-vous Restants
+remTitle = Remaining Appointments for  :
+remStatus1 = There are no remaining appointments available.
+remStatus2 = Available bookings will display at 8:00 a.m.
+remFifteen = Remaining 15 mins Appointments:
+remThirty = Remaining 30 mins Appointments:
+remFortyFive = Remaining 45 mins Appointments:
+remSixty = Remaining 60 mins Appointments:
+backtoMain = Back to Main Menu
+custAdded = New Customer Added!
+addedCust1 = CUSTOMER ADDED
+addedCust2 = has been added to the list of customers!
+custUpdated = Customer Updated!
+updatedCust1 = CUSTOMER UPDATE
+updatedCust2 = The following customer has been updated successfully!
+VALUE = VALUE WARNING
+valwarn = "The values entered render invalid. Please Try Again."
