--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -83,6 +83,9 @@ DelConfirm = Delete Confirmation
 DelAppt = Deleting Appointment
 ApptDel = Appointment Deleted
 ApptDelResults = THE FOLLOWING APPOINTMENT HAS BEEN DELETED!
+DelCust = Deleting Customer
+DeleteCustQ = Are you sure you wish to delete this customer?
+CustDelResults =  THE FOLLOWING CUSTOMER HAS BEEN DELETED! 
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
 CurrentDay = Current Day
