Updating Customer Appointment Modify

--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -114,3 +114,4 @@ updatedCust1 = CUSTOMER UPDATE
 updatedCust2 = The following customer has been updated successfully!
 VALUE = VALUE WARNING
 valwarn = "The values entered render invalid. Please Try Again."
+Updatefor = Update any appointment of choosing for : 
