Final Commit for v3.0 !

--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -48,10 +48,18 @@ addCust = ADD CUSTOMER
 modCust = UPDATE CUSTOMER
 addAppt = ADD APPOINTMENT
 modAppt = UPDATE APPOINTMENT
+newApptAdd = New Appointment Added!
+apptAdded1 = APPOINTMENT ADDED
+apptAdded2 = The appointment with the following criteria has been added : 
+
+curApptMod = Appointment Updated!
+apptUpdate1 = UPDATE CONFIRMATION
+apptUpdated2 = The appointment with the following criteria has been updated :
 All = All
 Month = Month
 Week = Week
 Name = Name
+Date = Date
 Address = Address
 Postal = Postal Code
 Phone = Phone
