AddApptController update prompts user to set appointments for the next day when outside of business hours

--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -108,7 +108,7 @@ apptTotalTitle = Appt. Totals, Totaux des R.v.
 apptRemTitle = Remaining Appointments , Rendez-vous Restants
 remTitle = Remaining Appointments for  :
 remStatus1 = There are no remaining appointments available.
-remStatus2 = Available bookings will display at 8:00 a.m.
+remStatus2 = Available bookings will start after 8:00 a.m.
 remFifteen = Remaining 15 mins Appointments:
 remThirty = Remaining 30 mins Appointments:
 remFortyFive = Remaining 45 mins Appointments:
