--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -107,7 +107,7 @@ Saturday = Saturday
 apptTotalTitle = Appt. Totals, Totaux des R.v.
 apptRemTitle = Remaining Appointments , Rendez-vous Restants
 remTitle = Remaining Appointments for  :
-remStatus1 = There are no remaining appointments available.
+remStatus1 = There are no remaining appointments available today.
 remStatus2 = Available bookings will start after 8:00 a.m.
 remFifteen = Remaining 15 mins Appointments:
 remThirty = Remaining 30 mins Appointments:
