--- a/src/main/resources/rb/Nat.properties
+++ b/src/main/resources/rb/Nat.properties
@@ -1,4 +1,4 @@
-Time =  Time
+Time =  Time :
 Username = Username
 Password = Password
 Confirm = Confirm
@@ -97,16 +97,9 @@ CustDelResults =  THE FOLLOWING CUSTOMER HAS BEEN DELETED!
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
 CurrentDay = Current Day
-Sunday = Sunday
-Monday = Monday
-Tuesday = Tuesday
-Wednesday = Wednesday
-Thursday = Thursday
-Friday = Friday
-Saturday = Saturday
-apptTotalTitle = Appt. Totals, Totaux des R.v.
-apptRemTitle = Remaining Appointments , Rendez-vous Restants
-remTitle = Remaining Appointments for  :
+apptTotalTitle = Appt. Totals
+apptRemTitle = Remaining Appointments
+remTitle = Remaining Appointments for  : 
 remStatus1 = There are no remaining appointments available today.
 remStatus2 = Available bookings will start after 8:00 a.m.
 remFifteen = Remaining 15 mins Appointments:
